--- a/about-us.html
+++ b/about-us.html
@@ -167,6 +167,8 @@
 					<div class="icondive"><img src="images/icons/mail.svg" alt="icon"></div>
 					<div class="media-body getintouchinfo">
 						<a href="mailto:nightlifetourschennai@gmail.com" target="_blank">nightlifetourschennai@gmail.com
+							<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
+							</a>
 							<span>Online Support</span></a>
 					</div>
 				</div>
@@ -227,7 +229,9 @@
 			<div class="row ptb-30">
 				<div class="col-lg-6 v-center">
 					<div class="about-image">
-						<img src="img/nightlife/slider2.jpg" alt="about us" class="img-fluid" />
+						<video controls class="video-custom img-fluid no-shadow">
+							<source src="img/nightlife/abt/v-2.mp4" type="video/mp4">
+						</video>
 					</div>
 					<!-- <div class="row in-stats small about-statistics">
 						<div class="col-lg-4 col-sm-4">
@@ -288,23 +292,27 @@
 		<div class="container">
 
 			<div class="row mt30">
-				<div class="col-lg-6 col-sm-12 mt30">
+				<div class="col-lg-4 col-sm-12 mt30">
 					<div class="s-block2 all-bg shadow p-3 rounded text-center">
 						<div class="card-icon"><img src="images/icons/vision.png" alt="icon" class="w80 mb20"></div>
 						<h3>Our Misson</h3>
 						<p class="mt15  text-justify pb-4">
-							To provide seamless, safe, and exciting nightlife tours, connecting travelers to the best
-							pubs, clubs, cafés, and wellness spots.
+							Safty 1st Rest all Next to Avoid unwanted scams just booking with Night life tours.
 						</p>
 					</div>
 				</div>
-				<div class="col-lg-6 col-sm-12 mt30">
+				<div class="col-lg-4 col-sm-12 mt30">
+					<div class="s-block2 all-bg shadow p-3 rounded text-center">
+						<div class="card-icon">
+							<img src="img/nightlife/abt/v-1.jpeg" alt="abt-img"></div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-sm-12 mt30">
 					<div class="s-block2 all-bg shadow text-center p-3 rounded">
 						<div class="card-icon"><img src="images/icons/mountain.png" alt="icon" class="w80 mb20"></div>
 						<h3>Our Vision</h3>
 						<p class="mt15 text-justify" style="padding-bottom: 30px;">
-							To be the top choice for unforgettable nightlife experiences across Goa, Thailand, and
-							Malaysia.
+							We make your Dream come True Easy & Smart.
 						</p>
 					</div>
 				</div>
@@ -389,14 +397,16 @@
 							<li>
 								<span><i class="fas fa-envelope"></i></span>
 								<p>Email <span> <a href="mailto:nightlifetourschennai@gmail.com"
-											target="_blank">nightlifetourschennai@gmail.com</a></span>
+											target="_blank">nightlifetourschennai@gmail.com</a>|
+											<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
+											</a></span>
 								</p>
 							</li>
 							<li>
 								<span><i class="fas fa-phone-alt"></i></span>
 								<p>Phone <span> <a href="tel:+919600063175" target="_blank">
 											+91 9600063175</a> | <a href="tel:+919551077109" target="_blank">
-											+91 9551077109</a> | </span></p>
+											+91 9551077109</a>  </span></p>
 							</li>
 							<div class="d-flex">
 								<!-- <li>
