--- a/bali.html
+++ b/bali.html
@@ -163,6 +163,8 @@
 					<div class="icondive"><img src="images/icons/mail.svg" alt="icon"></div>
 					<div class="media-body getintouchinfo">
 						<a href="mailto:nightlifetourschennai@gmail.com" target="_blank">nightlifetourschennai@gmail.com
+							<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
+							</a>
 							<span>Online Support</span></a>
 					</div>
 				</div>
@@ -193,55 +195,78 @@
 
 	<section class="service pad-tb all-bg mt60">
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-4">
-					<div class="image-block wow fadeIn">
-						<img src="img/nightlife/bali.jpeg" alt="image" class="img-fluid no-shadow" />
-					</div>
-				</div>
-				<div class="col-lg-8 block-1">
-					<div class="common-heading text-l pl25">
-						<h2>Experience Bali’s Thriving Nightlife</h2>
-						<p class="text-justify">Bali is more than just stunning beaches and serene landscapes—it’s also
-							a paradise for nightlife lovers! From chic beach clubs with breathtaking ocean views to
-							electrifying nightclubs filled with world-class DJs, Bali offers an unforgettable party
-							scene.
-							Whether you prefer a relaxed evening with handcrafted cocktails or an all-night dance
-							experience, Bali has something for everyone.</p>
+			<div class="row justify-content-center">
+				<div class="col-lg-8">
+					<div class="common-heading ptag">
+						<h2>BALI TRIP - OPT 3 - LUXURY | 4NTS & 5DAYS ( NEAR BEACH NIGHT LIFE )</h2>
+						<span>( +18 Adult Hotel | Free Adult Spa Contact | Adult Disco | & Bali Room Girls )</span>
 					</div>
 				</div>
 			</div>
 			<div class="row mt60">
-				<div class="col-lg-8 block-1">
-					<div class="common-heading text-l pl25">
-						<h2>Top Nightlife Hotspots in Bali</h2>
-						<p class="text-justify">Kuta, Seminyak, and Canggu are the heart of Bali’s nightlife, each
-							offering a unique vibe. Kuta is famous for its lively bars and budget-friendly party spots,
-							while Seminyak boasts upscale beach clubs like Potato Head and Ku De Ta, perfect for a
-							luxury nightlife experience. For a laid-back yet stylish night out, Canggu’s trendy bars and
-							live music venues create the perfect ambiance to unwind and enjoy Bali’s vibrant energy.</p>
-					</div>
-				</div>
 				<div class="col-lg-4">
 					<div class="image-block wow fadeIn">
-						<img src="img/nightlife/bali1.jfif" alt="image" class="img-fluid no-shadow" />
+						<img src="img/nightlife/bali/img (1).jpeg" alt="image" class="img-fluid no-shadow" />
+					</div>
+				</div>
+				<div class="col-lg-8 block-1">
+					<div class="common-heading text-l pl25">
+						<h5>Bali Room Tour Video</h5>
+						<p class="text-justify">
+							Day 1 & Day 2 or All 5 Days We give Same depends on Early Booking
+							<a href="https://youtu.be/JDrIla11Z4A" target="_blank">Watch Video</a>
+						</p>
+						<h5>Package Details</h5>
+						<p class="text-justify">Per Person on - 40000 if 1 Person | Flight Days Advance Booking 30 to
+							35K</p>
+						<p class="text-justify">Per Person on - 25000 if 2 Person | 1 Room | 3Days Sight Seeing Small
+							Car</p>
+						<p class="text-justify"> Per Person on - 18000 if 4 Person | 2 Room | 3Days Sight Seeing Big Car
+						</p>
+						<p class="text-justify"> Per Person on - 16000 if 6 Person | 3 Room | 3Days Sight Seeing Van</p>
+						<p>Room Tour Video 
+							<a href="https://youtu.be/JDrIla11Z4A" target="_blank">Watch Video</a>
+							<a href="https://youtu.be/byRqLkYwvzo" target="_blank">Watch Video</a>						</p>
 					</div>
 				</div>
 			</div>
-			<div class="row  mt60">
-				<div class="col-lg-4">
-					<div class="image-block wow fadeIn">
-						<img src="img/nightlife/bali2.jpg" alt="image" class="img-fluid no-shadow" />
-					</div>
-				</div>
+
+			<div class="row mt60">
 				<div class="col-lg-8 block-1">
 					<div class="common-heading text-l pl25">
-						<h2>Unwind & Indulge in Bali’s Relaxing Side</h2>
-						<p class="text-justify">Beyond the high-energy nightclubs and bars, Bali also offers a more
-							relaxing side to its nightlife. Enjoy a rejuvenating massage at a top-rated spa, sip
-							cocktails at a rooftop lounge, or take a moonlit walk on the beach. Whether you're looking
-							for adventure or relaxation, Bali’s nightlife caters to all moods, making it a must-visit
-							destination for night explorers.</p>
+						<span></span>
+						<h5>Sight Seeing in Bali - 3 Days with Only Entrance & Ride Extra</h5>
+						<p class="text-justify"><b class="text-white">Visa on Arrival - </b>32USD or 5L | Our Company
+							Give all Private Sight Seeing</p>
+						<p class="text-justify"><b class="text-white">Day 1: </b>  Pick Up Airport 16hrs - ( Time permits Only Beach & Spa walkable )</p>
+						<p class="text-justify"><b class="text-white">Day 2: </b> 
+								<p>After Break fast - Full Day Sight Seeing With Entrance - Ride Pay & Use 
+									( 9am to 18Hrs - Same Driver All Days )</p>
+								<p>Water sport ( Ride cost by Client On own - 10 to 12Hrs )</p>
+								<p>Pandawa beach - Film Shooting Spot ( 13 to 14Hrs )</p>
+								<p>Uluwatu Temple ( Sea View Ocean Top - 15 to 16Hrs )</p>
+								<p>Tanah lot - Sea Shore Temple ( 17 to 19Hrs )</p>
+							</ul>
+						</p>
+						<p class="text-justify"><b class="text-white">Day 3: </b>
+							<p>After Break fast - Full Day Sight Seeing </p>
+							<p>Tegenungan waterfall - ( With Entrance - 11.30 to 13Hrs )</p>
+							<p>Kintamani volcano - ( With Entrance 14Hrs to 15Hrs  )</p>
+							<p>Bali Swing - ( With Entrance 16Hrs to 17Hrs )</p>
+							<p>Ubud Palace & Market Shopping - ( With Entrance 18 to 19Hrs )</p>
+						</p>
+						<p class="text-justify"><b class="text-white">Day 4: </b> 
+							<p>After Break fast - Full Day Sight Seeing</p>
+							<p>River Rafting Area Only ( Ride Pay & Use ) cost by customers if in Need </p>
+							<p>Bali Bird Park - ( U like Pay Entrance & use  )</p>
+							<p>Ulun Danu Beratan Temple - ( With Entrance )</p>
+						</p>
+						<p class="text-justify"><b class="text-white">Day 5: </b> Pick Up hotel - Shopping Krishna Market & Drop to Airport ( Depend on Flight Timing )</p>
+					</div>
+				</div>
+				<div class="col-lg-4">
+					<div class="image-block wow fadeIn">
+						<img src="img/nightlife/bali/img (2).jpeg" alt="image" class="img-fluid no-shadow" />
 					</div>
 				</div>
 			</div>
@@ -273,7 +298,9 @@
 							<li>
 								<span><i class="fas fa-envelope"></i></span>
 								<p>Email <span> <a href="mailto:nightlifetourschennai@gmail.com"
-											target="_blank">nightlifetourschennai@gmail.com</a></span>
+											target="_blank">nightlifetourschennai@gmail.com</a>|
+											<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
+											</a></span>
 								</p>
 							</li>
 							<li>
@@ -301,7 +328,8 @@
 					</div>
 
 					<p class=" border-bottom pb-2 text-justify pt-3  border-2">© 2025 All Rights Reserved By <b
-						class="text-primary"><a href="https://nightlifetours.in/" target="_blank">Night Life Tours</a></b></p>
+							class="text-primary"><a href="https://nightlifetours.in/" target="_blank">Night Life
+								Tours</a></b></p>
 				</div>
 			</div>
 		</div>
