--- a/contact-us.html
+++ b/contact-us.html
@@ -157,6 +157,8 @@
 					<div class="icondive"><img src="images/icons/mail.svg" alt="icon"></div>
 					<div class="media-body getintouchinfo">
 						<a href="mailto:nightlifetourschennai@gmail.com" target="_blank">nightlifetourschennai@gmail.com
+							<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
+							</a>
 							<span>Online Support</span></a>
 					</div>
 				</div>
@@ -222,6 +224,8 @@
 							<div class="text pl-4">
 								<p><span>Email:</span> <a
 										href="mailto:nightlifetourschennai@gmail.com">nightlifetourschennai@gmail.com
+									</a> 
+									<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
 									</a>
 								</p>
 							</div>
@@ -317,7 +321,10 @@
 							<li>
 								<span><i class="fas fa-envelope"></i></span>
 								<p>Email <span> <a href="mailto:nightlifetourschennai@gmail.com"
-											target="_blank">nightlifetourschennai@gmail.com</a></span>
+											target="_blank">nightlifetourschennai@gmail.com</a> | 
+										<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
+										</a>
+									</span>
 								</p>
 							</li>
 							<li>
@@ -345,7 +352,8 @@
 					</div>
 
 					<p class=" border-bottom pb-2 text-justify pt-3  border-2">© 2025 All Rights Reserved By <b
-						class="text-primary"><a href="https://nightlifetours.in/" target="_blank">Night Life Tours</a></b></p>
+							class="text-primary"><a href="https://nightlifetours.in/" target="_blank">Night Life
+								Tours</a></b></p>
 				</div>
 			</div>
 		</div>
