--- a/gallery_photo.html
+++ b/gallery_photo.html
@@ -164,6 +164,8 @@
 					<div class="icondive"><img src="images/icons/mail.svg" alt="icon"></div>
 					<div class="media-body getintouchinfo">
 						<a href="mailto:nightlifetourschennai@gmail.com" target="_blank">nightlifetourschennai@gmail.com
+							<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
+							</a>
 							<span>Online Support</span></a>
 					</div>
 				</div>
@@ -311,7 +313,10 @@
 							<li>
 								<span><i class="fas fa-envelope"></i></span>
 								<p>Email <span> <a href="mailto:nightlifetourschennai@gmail.com"
-											target="_blank">nightlifetourschennai@gmail.com</a></span>
+											target="_blank">nightlifetourschennai@gmail.com</a>|
+											<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
+											</a>
+										</span>
 								</p>
 							</li>
 							<li>
