--- a/gallery_video.html
+++ b/gallery_video.html
@@ -164,6 +164,8 @@
 					<div class="icondive"><img src="images/icons/mail.svg" alt="icon"></div>
 					<div class="media-body getintouchinfo">
 						<a href="mailto:nightlifetourschennai@gmail.com" target="_blank">nightlifetourschennai@gmail.com
+							<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
+							</a>
 							<span>Online Support</span></a>
 					</div>
 				</div>
@@ -234,6 +236,30 @@
 						Your browser does not support the video tag.
 					</video>
 				</div>
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
+					<video controls class="video-custom img-fluid no-shadow">
+						<source src="img/nightlife/gallery_videos/v-3.mp4" type="video/mp4">
+						Your browser does not support the video tag.
+					</video>
+				</div>
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
+					<video controls class="video-custom img-fluid no-shadow">
+						<source src="img/nightlife/gallery_videos/v-2.mp4" type="video/mp4">
+						Your browser does not support the video tag.
+					</video>
+				</div>
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
+					<video controls class="video-custom img-fluid no-shadow">
+						<source src="img/nightlife/gallery_videos/v-4.mp4" type="video/mp4">
+						Your browser does not support the video tag.
+					</video>
+				</div>
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
+					<video controls class="video-custom img-fluid no-shadow">
+						<source src="img/nightlife/gallery_videos/v-5.mp4" type="video/mp4">
+						Your browser does not support the video tag.
+					</video>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -260,7 +286,9 @@
 							<li>
 								<span><i class="fas fa-envelope"></i></span>
 								<p>Email <span> <a href="mailto:nightlifetourschennai@gmail.com"
-											target="_blank">nightlifetourschennai@gmail.com</a></span>
+											target="_blank">nightlifetourschennai@gmail.com</a>|
+											<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
+											</a></span>
 								</p>
 							</li>
 							<li>
