--- a/index.html
+++ b/index.html
@@ -225,6 +225,8 @@
 					<div class="icondive"><img src="images/icons/mail.svg" alt="icon"></div>
 					<div class="media-body getintouchinfo">
 						<a href="mailto:nightlifetourschennai@gmail.com" target="_blank">nightlifetourschennai@gmail.com
+							<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
+							</a>
 							<span>Online Support</span></a>
 					</div>
 				</div>
@@ -433,41 +435,54 @@
 			</div>
 			<div class="row mt30">
 				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
-					<img src="img/nightlife/img1.jpg" alt="img">
-				</div>
-				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.5s">
-					<img src="img/nightlife/img2.jpg" alt="img">
-				</div>
-				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.1s">
-					<img src="img/nightlife/img3.jpg" alt="img">
-				</div>
-				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.7s">
-					<img src="img/nightlife/img4.jpg" alt="img">
-				</div>
-				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.7s">
-					<img src="img/nightlife/img5.jpg" alt="img">
-				</div>
-				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.7s">
-					<img src="img/nightlife/img6.jpg" alt="img">
+					<img src="img/nightlife/tourist/img (1).jpeg" alt="img">
 				</div>
 				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
-					<img src="img/nightlife/img7.jpg" alt="img">
+					<img src="img/nightlife/tourist/img (2).jpeg" alt="img">
 				</div>
-				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.5s">
-					<img src="img/nightlife/img8.jpg" alt="img">
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
+					<img src="img/nightlife/tourist/img (3).jpeg" alt="img">
 				</div>
-				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.1s">
-					<img src="img/nightlife/img9.jpg" alt="img">
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
+					<img src="img/nightlife/tourist/img (4).jpeg" alt="img">
 				</div>
-				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.7s">
-					<img src="img/nightlife/img10.jpg" alt="img">
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
+					<img src="img/nightlife/tourist/img (5).jpeg" alt="img">
 				</div>
-				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.7s">
-					<img src="img/nightlife/img11.jpg" alt="img">
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
+					<img src="img/nightlife/tourist/img (6).jpeg" alt="img">
 				</div>
-				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.7s">
-					<img src="img/nightlife/img12.jpg" alt="img">
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
+					<img src="img/nightlife/tourist/img (7).jpeg" alt="img">
 				</div>
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
+					<img src="img/nightlife/tourist/img (8).jpeg" alt="img">
+				</div>
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
+					<img src="img/nightlife/tourist/img (9).jpeg" alt="img">
+				</div>
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
+					<img src="img/nightlife/tourist/img (10).jpeg" alt="img">
+				</div>
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
+					<img src="img/nightlife/tourist/img (11).jpeg" alt="img">
+				</div>
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
+					<img src="img/nightlife/tourist/img (12).jpeg" alt="img">
+				</div>
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
+					<img src="img/nightlife/tourist/img (13).jpeg" alt="img">
+				</div>
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
+					<img src="img/nightlife/tourist/img (14).jpeg" alt="img">
+				</div>
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
+					<img src="img/nightlife/tourist/img (15).jpeg" alt="img">
+				</div>
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
+					<img src="img/nightlife/tourist/img (16).jpeg" alt="img">
+				</div>
+				
 			</div>
 			<div class="row justify-content-center">
 				<div class="col-lg-8">
@@ -610,7 +625,9 @@
 							<li>
 								<span><i class="fas fa-envelope"></i></span>
 								<p>Email <span> <a href="mailto:nightlifetourschennai@gmail.com"
-											target="_blank">nightlifetourschennai@gmail.com</a></span>
+											target="_blank">nightlifetourschennai@gmail.com</a> |
+											<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
+											</a></span>
 								</p>
 							</li>
 							<li>
