--- a/malaysia.html
+++ b/malaysia.html
@@ -164,6 +164,8 @@
 					<div class="icondive"><img src="images/icons/mail.svg" alt="icon"></div>
 					<div class="media-body getintouchinfo">
 						<a href="mailto:nightlifetourschennai@gmail.com" target="_blank">nightlifetourschennai@gmail.com
+							<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
+							</a>
 							<span>Online Support</span></a>
 					</div>
 				</div>
@@ -192,88 +194,52 @@
 		</div>
 	</div>
 
-	<section class="service-block pad-tb light-dark mt60">
+	<section class="service pad-tb all-bg mt60">
 		<div class="container">
-			<div class="row upset justify-content-center mt60">
-				<div class="col-lg-4 v-center order1">
-					<div class="image-block1">
-						<img src="img/nightlife/service31.jpg" alt="Process" class="img-fluid" />
-					</div>
-				</div>
-				<div class="col-lg-7 v-center order2">
-					<div class="ps-block">
-						<span>1</span>
-						<h3>Sanctuary of Truth:</h3>
-						<p class="text-justify">The Sanctuary of Truth is a gigantic all wood construction museum and
-							one of the best places to visit in Pattaya. It is located at the Rachvate cape of Naklua
-							Pattaya City. It is one and only all-wood sculpture building in the whole world.</p>
-						<p> You should visit this picturesque and scenic place once in your lifetime. You’ll see several
-							local plays, martial arts, Thai dances, sword fighting, Thai boxing, etc. at this place.</p>
-						<p>Take lovely pictures at the photo points and make memories last forever. Enjoy their
-							delightful food. The greenery and the overwhelming background of The Sanctuary of Truth
-							Museum will be a lifetime experience for both of you.</p>
+			<div class="row justify-content-center">
+				<div class="col-lg-8">
+					<div class="common-heading ptag">
+						<h2>🔞 Malaysia - Luxury + Package with & Infinity Pool Hotel - 4*Star Hotel 🗼</h2>
+						<span>3Nts KualaLumpur Red Light Area Hotel Joiner Free</span>
 					</div>
 				</div>
 			</div>
-			<div class="row upset justify-content-center mt60">
-				<div class="col-lg-7 v-center order2">
-					<div class="ps-block">
-						<span>2</span>
-						<h3>Big Buddha:</h3>
-						<p class="text-justify">The Big Buddha Statue in Pattaya is a cultural highlight. At Big Buddha
-							Hill/ Wat Phra Yai, you can see the biggest Buddha statue of Chonburi province, which is
-							visible from a distance even before you reach your destination.</p>
-						<p>It is located on top of Pratamnak Hill, south of the city of Pattaya. The enormous
-							golden-colored Buddha is around 18 meters high and is officially named Phra Buddha Sukhothai
-							Walai Chonlathan, and is also known as Luang Pho Yai.</p>
+			<div class="row mt60">
+				<div class="col-lg-4">
+					<div class="image-block wow fadeIn">
+						<img src="img/nightlife/malaysia/img (2).jpeg" alt="image" class="img-fluid no-shadow" />
 					</div>
 				</div>
-				<div class="col-lg-4 v-center order1">
-					<div class="image-block1">
-						<img src="img/nightlife/service32.jpg" alt="Process" class="img-fluid" />
-					</div>
-				</div>
-			</div>
-			<div class="row upset justify-content-center mt60">
-				<div class="col-lg-4 v-center order1">
-					<div class="image-block1">
-						<img src="img/nightlife/ser33.jpg" alt="Process" class="img-fluid" />
-					</div>
-				</div>
-				<div class="col-lg-7 v-center order2">
-					<div class="ps-block">
-						<span>3</span>
-						<h3>Viewpoint in Pattaya:</h3>
-						<p class="text-justify">Khao Pattaya Viewpoint is a small hilltop that offers spectacular
-							panoramic views of the city. The sacred wat Kho Phra is the temple located at the hill and
-							is also one of the best tourist attractions.</p>
-
-					</div>
-				</div>
-			</div>
-			<div class="row upset justify-content-center mt60">
-				<div class="col-lg-7 v-center order2">
-					<div class="ps-block">
-						<span>4</span>
-						<h3>Sri Racha Tiger Zoo:</h3>
-						<p class="text-justify">The Sri Racha Tiger Zoo is one of the best attractions in Pattaya. It is
-							the biggest zoo of its kind in the entire world. Set in a lovely natural atmosphere and
-							located on the outskirts of Pattaya, the zoo boasts of the largest number of tigers in
-							Thailand.</p>
-						<p>You can see a huge crocodile population which makes it the largest crocodile zoo in the
-							world. This zoo is a popular choice among everyone and is often visited by families for a
-							one-of-its-kind experience.</p>
-						<p>You will see more than 400 Royal Bengal tigers freely roaming in their natural habitat</p>
-						<p><b class="text-dark">Opening hours: 08.00 AM to 06.00 PM</b></p>
-					</div>
-				</div>
-				<div class="col-lg-4 v-center order1">
-					<div class="image-block1">
-						<img src="img/nightlife/ser34.jpg" alt="Process" class="img-fluid" />
+				<div class="col-lg-8 block-1">
+					<div class="common-heading text-l pl25">
+						<span></span>
+						<h5>Package Details</h5>
+						<p class="text-justify"> Per Adult Rs 23000/- Per Pax on Double Sharing if 4 Person Only
+							Flight -16000 to 18000/- (Per Person) | Visa - Free till May
+							 </p>
+						<p class="text-justify"> 1 Nights Stay in - KualaLumpur - Red Light Area - Infinity pool located on the 37th floor</p>
+						<p class="text-justify">2 Nights Stay in - KualaLumpur - Shopping  & Spa Area Easy Cheap Massage</p>
 					</div>
 				</div>
 			</div>
 
+			<div class="row mt60">
+				<div class="col-lg-8 block-1">
+					<div class="common-heading text-l pl25">
+						<h5>Days in Malaysia</h5>
+						<p class="text-justify"><b class="text-white">Day 1: </b> 7am Kul Airport to Putrajaya Palace View Break fast Check in 14Hrs ( Enjoy Mall & Pool on37th Floor )</p>
+						<p class="text-justify"><b class="text-white">Day 2: </b> After Break fast  Driver to Genting 3Hrs - Batu Caves visit & 2 Way Cable Car Ride </p>
+						<p class="text-justify"><b class="text-white">Day 3: </b> Half Day Kuala Lumpur City Tour Night Stay in KUL Twin Tower Entrance or KL Tower</p>
+						<p class="text-justify"><b class="text-white">Day 4: </b> Time Permits Shopping & Drop Airport ( Taxis Waiting Charge on Extra ) Or U can walk & do Shopping also 17Hrs Car Pick up Drop Aiport..</p>
+						<p class="text-justify"><b class="text-white">Cab Driver Help for - Night Girls | Adult Massage +18: </b> All Sightseeing & Transfer on Pvt Car</p>
+					</div>
+				</div>
+				<div class="col-lg-4">
+					<div class="image-block wow fadeIn">
+						<img src="img/nightlife/malaysia/img (1).jpeg" alt="image" class="img-fluid no-shadow" />
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
 
@@ -300,7 +266,9 @@
 							<li>
 								<span><i class="fas fa-envelope"></i></span>
 								<p>Email <span> <a href="mailto:nightlifetourschennai@gmail.com"
-											target="_blank">nightlifetourschennai@gmail.com</a></span>
+											target="_blank">nightlifetourschennai@gmail.com</a>|
+											<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
+											</a></span>
 								</p>
 							</li>
 							<li>
