--- a/pattaya.html
+++ b/pattaya.html
@@ -168,6 +168,8 @@
 					<div class="icondive"><img src="images/icons/mail.svg" alt="icon"></div>
 					<div class="media-body getintouchinfo">
 						<a href="mailto:nightlifetourschennai@gmail.com" target="_blank">nightlifetourschennai@gmail.com
+							<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
+							</a>
 							<span>Online Support</span></a>
 					</div>
 				</div>
@@ -200,7 +202,7 @@
 			<div class="row justify-content-center">
 				<div class="col-lg-8">
 					<div class="common-heading ptag">
-						<h2>LUXURY PLUS -➕🔞</h2>
+						<h2>LUXURY PLUS 🔞</h2>
 						<span> ( Pattaya 3Nts - 100 % Pure Adult Trip )</span>
 					</div>
 				</div>
@@ -208,7 +210,7 @@
 			<div class="row">
 				<div class="col-lg-6 block-1">
 					<div class="common-heading text-l pl25">
-						<h5>Package Details</h5>
+						<h5>Package Details in Pattaya: </h5>
 						<p class="text-justify">Price Per Person Rs 9900/- ( if 4 Person )</p>
 						<p>Price Per Person Rs 9000/- ( if 6 Person )</p>
 						<p>Price Per Person Rs 7000/- ( if 10 to 12 Person ) </p>
@@ -217,13 +219,13 @@
 					</div>
 				</div>
 				<div class="col-lg-6">
-					<h5>Sightseeing Includes with Entrance Only </h5>
-					<p class="text-justify"><span class="text-primary">Day 1 </span>Dmk Airport Transfer Tiger Topio
+					<h5>Sightseeing Includes with Entrance Only :</h5>
+					<p class="text-justify"><b class="text-white">Day 1 </b>Dmk Airport Transfer Tiger Topio
 						with Crocodile Show Break fast Morning Check in Hotel </p>
-					<p><span class="text-primary">Day 2 </span>Coral Island with Lunch ( 9am to 14.30hrs )</p>
-					<p><span class="text-primary">Day 3 </span>Pattaya City & Temple Tour | Free Drop to Honey Soap -
+					<p><b class="text-white">Day 2 </b>Coral Island with Lunch ( 9am to 14.30hrs )</p>
+					<p><b class="text-white">Day 3 </b>Pattaya City & Temple Tour | Free Drop to Honey Soap -
 						Massage ( Pay & Use for Sap )</p>
-					<p><span class="text-primary">Day 4 </span>Check out Pattaya - 11.30 keep luggage in Reception go
+					<p><b class="text-white">Day 4 </b>Check out Pattaya - 11.30 keep luggage in Reception go
 						Lunch & Shopping back to Hotel by 15hrs Cab Start 15.30hrs Airport Drop - 18hrs ( Flight @ 21hrs
 						)</p>
 				</div>
@@ -298,7 +300,9 @@
 							<li>
 								<span><i class="fas fa-envelope"></i></span>
 								<p>Email <span> <a href="mailto:nightlifetourschennai@gmail.com"
-											target="_blank">nightlifetourschennai@gmail.com</a></span>
+											target="_blank">nightlifetourschennai@gmail.com</a>|
+											<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
+											</a></span>
 								</p>
 							</li>
 							<li>
