--- a/phuket.html
+++ b/phuket.html
@@ -162,6 +162,8 @@
 					<div class="icondive"><img src="images/icons/mail.svg" alt="icon"></div>
 					<div class="media-body getintouchinfo">
 						<a href="mailto:nightlifetourschennai@gmail.com" target="_blank">nightlifetourschennai@gmail.com
+							<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
+							</a>
 							<span>Online Support</span></a>
 					</div>
 				</div>
@@ -193,27 +195,47 @@
 
 	<section class="service pad-tb all-bg mt60">
 		<div class="container">
-			<div class="row">
+			<div class="row justify-content-center">
+				<div class="col-lg-8">
+					<div class="common-heading ptag">
+						<h2>4Nts Phuket Only</h2>
+						<span>Pax - 4 ( 2 Rooms ) Travel Date - March to June</span>
+						<span>04 Nights - Phuket - 3 star  ( On your Choice Joiner Free )</span>
+					</div>
+				</div>
+			</div>
+			<div class="row mt60">
 				<div class="col-lg-4">
 					<div class="image-block wow fadeIn">
-						<img src="img/nightlife/ser41.jpg" alt="image" class="img-fluid no-shadow" />
+						<img src="img/nightlife/phuket/img (1).jpeg" alt="image" class="img-fluid no-shadow" />
 					</div>
 				</div>
 				<div class="col-lg-8 block-1">
 					<div class="common-heading text-l pl25">
+						<h5>Accommodation with Breakfast</h5>
+						<p class="text-justify"><b class="text-white">Day 1: </b> Phuket Airport Pick up 07.30 Break fast on own than - City Tour than Check in hotel 13Hrs Only</p>
+						<p class="text-justify"><b class="text-white">Day 2: </b> Full Day - Phi Phi Island by ferry or Seed boat with Lunch Sic ( Excluding Island Fee ) </p>
+						<p class="text-justify"><b class="text-white">Day 3: </b> White Water Rafting 5Kms | Zipline & lunch </p>
+						<p class="text-justify"><b class="text-white">Day 4: </b> Free & Easy or Day trip to Krabi with Nature Pool</p>
+						<p class="text-justify"><b class="text-white">Day 5: </b> Airport Drop Pvt</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="row mt60">
+				<div class="col-lg-8 block-1">
+					<div class="common-heading text-l pl25">
 						<span></span>
-						<h2>Overview</h2>
-						<p class="text-justify">Pattaya sometimes appears to have a reputation and impression towards
-							the tourists. When you are planning a trip with your wife, then you need to plan very
-							cautiously. Though Pattaya remains a top holiday destination for tourists across the world a
-							few cautionary measures are required while planning a holiday with your loved one.</p>
-						<p class="text-justify">With the exotic nightlife offered by Pattaya, it tends to have a
-							reputation of its own. But you can enjoy the world’s most postcard-perfect beaches, ornate
-							temples, and rich culture, food to die for and all at a very affordable price without any
-							worry.</p>
-						<p class="text-justify">However, there are some places which are good to avoid while you are
-							traveling with your wife and family. Hope these tips and suggestions will help you during
-							your trip.</p>
+						<h5>Package Details</h5>
+						<p class="text-justify"> Price Per Person Rs 18000/- ( if 4 Person )</p>
+						<p class="text-justify"> Price Per Person Rs 16000/- ( if 6 Person )</p>
+						<p class="text-justify"> Price Per Person Rs 40000/- ( if 1 Single & Solo Trip ) </p>
+						<p class="text-justify text-white"> Phuket Stay : 10 Mins to Walk in Street Indian Hotel With Pool & Spa</p>
+					</div>
+				</div>
+				<div class="col-lg-4">
+					<div class="image-block wow fadeIn">
+						<img src="img/nightlife/phuket/img (2).jpeg" alt="image" class="img-fluid no-shadow" />
 					</div>
 				</div>
 			</div>
@@ -326,7 +348,9 @@
 							<li>
 								<span><i class="fas fa-envelope"></i></span>
 								<p>Email <span> <a href="mailto:nightlifetourschennai@gmail.com"
-											target="_blank">nightlifetourschennai@gmail.com</a></span>
+											target="_blank">nightlifetourschennai@gmail.com</a>|
+											<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
+											</a></span>
 								</p>
 							</li>
 							<li>
