--- a/bangkok.html
+++ b/bangkok.html
@@ -163,6 +163,8 @@
 					<div class="icondive"><img src="images/icons/mail.svg" alt="icon"></div>
 					<div class="media-body getintouchinfo">
 						<a href="mailto:nightlifetourschennai@gmail.com" target="_blank">nightlifetourschennai@gmail.com
+							<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
+							</a>
 							<span>Online Support</span></a>
 					</div>
 				</div>
@@ -191,130 +193,69 @@
 		</div>
 	</div>
 
-	<section class="service pad-tb mt60">
+	<section class="service pad-tb all-bg mt60">
 		<div class="container">
-			<div class="container">
-				<div class="row justify-content-center">
-					<div class="col-lg-8">
-						<div class="common-heading ptag">
-							<h2>LUXURY PLUS -➕🔞</h2>
-							<span> ( Pattaya 3Nts & 1Nts Bangkok - 100 % Pure Adult Trip )</span>
-						</div>
+			<div class="row justify-content-center">
+				<div class="col-lg-8">
+					<div class="common-heading ptag">
+						<h2>LUXURY PLUS 🔞</h2>
+						<span> ( Pattaya 3Nts & 1Nts Bangkok - 100 % Pure Adult Trip )</span>
 					</div>
 				</div>
-		</div>
-	</section>
-
-	<section class="service-block pad-tb light-dark">
-		<div class="container">
-			<div class="row upset justify-content-center">
-				<div class="col-lg-4 v-center order1">
-					<div class="image-block1">
-						<img src="img/nightlife/pattay_bang/img1.jpeg" alt="Process" class="img-fluid" />
-					</div>
-				</div>
-				<div class="col-lg-7 v-center order2">
-					<div class="ps-block">
-						<span>1</span>
-						<h3>Package in Pattaya & Bangkok : </h3>
+			</div>
+			<div class="row">
+				<div class="col-lg-6 block-1">
+					<div class="common-heading text-l pl25">
+						<h5>Package in Pattaya & Bangkok:</h5>
 						<p class="text-justify">Price Per Person Rs 16000/- ( if 2 Person 1 Room ) </p>
 						<p class="text-justify">Price Per Person Rs 14000/- ( if 5 Person 2 Room ) </p>
+						<h5>Days in Pattaya & Bangkok Stay:</h5>
+						<p class="text-justify"><b class="text-white"> Day 1 to Day 3 - Pattaya Stay </b>3 Mins Walk in
+							Street Indian Hotel With Pool & Spa</p>
+						<p class="text-justify"><b class="text-white">Day 4 & Day 5 - Bangkok Stay : </b>City Hotel Near
+							Nana Plaza Sex Mall & Red Light Area</p>
 					</div>
 				</div>
-			</div>
-			<div class="row upset justify-content-center mt60">
-				<div class="col-lg-7 v-center order2">
-					<div class="ps-block">
-						<span>2</span>
-						<h3>Days in Pattaya & Bangkok Stay</h3>
-						<p class="text-justify"><b class="text-white"> Day 1 to Day 3 - Pattaya Stay </b>3 Mins Walk in Street Indian Hotel With Pool & Spa</p>
-						<p class="text-justify"><b class="text-white">Day 4 & Day 5 - Bangkok Stay : </b>City Hotel Near Nana Plaza Sex Mall & Red Light Area
-					</div>
-				</div>
-				<div class="col-lg-4 v-center order1">
-					<div class="image-block1">
-						<img src="img/nightlife/pattay_bang/img2.jpeg" alt="Process" class="img-fluid" />
-					</div>
-				</div>
-			</div>
-
-			<div class="row upset justify-content-center mt60">
-				<div class="col-lg-4 v-center order1">
-					<div class="image-block1">
-						<img src="img/nightlife/pattay_bang/img3.jpeg" alt="Process" class="img-fluid" />
-					</div>
-				</div>
-				<div class="col-lg-7 v-center order2">
-					<div class="ps-block">
-						<span>3</span>
-						<h3>Day 1</h3>
-						<p class="text-justify">Bkk Transfer Tiger Topia with Crocodile Show Break fast  Morning Check in Hotel
-						</p>
-
-					</div>
-				</div>
-			</div>
-			<div class="row upset justify-content-center mt60">
-				<div class="col-lg-7 v-center order2">
-					<div class="ps-block">
-						<span>4</span>
-						<h3> Day 2</h3>
-						<p class="text-justify">Coral Island with Lunch ( 9am to 14hrs )</p>
-					</div>
-				</div>
-				<div class="col-lg-4 v-center order1">
-					<div class="image-block1">
-						<img src="img/nightlife/pattay_bang/img4.jpeg" alt="Process" class="img-fluid" />
-					</div>
-				</div>
-			</div>
-			<div class="row upset justify-content-center mt60">
-				<div class="col-lg-4 v-center order1">
-					<div class="image-block1">
-						<img src="img/nightlife/pattay_bang/img5.jpeg" alt="Process" class="img-fluid" />
-					</div>
-				</div>
-				<div class="col-lg-7 v-center order2">
-					<div class="ps-block">
-						<span>5</span>
-						<h3>Day 3 </h3>
-						<p class="text-justify"> Pattaya City & Temple Tour | Free Drop to Honey Soap - Massage ( Pay & Use )
-						</p>
-
-					</div>
-				</div>
-			</div>
-			<div class="row upset justify-content-center mt60">
-				<div class="col-lg-7 v-center order2">
-					<div class="ps-block">
-						<span>6</span>
-						<h3> Day 4</h3>
-						<p class="text-justify"> Check out Pattaya Drop to Bangkok Hotel Stay </p>
-
-					</div>
-				</div>
-				<div class="col-lg-4 v-center order1">
-					<div class="image-block1">
-						<img src="img/nightlife/pattay_bang/img6.jpeg" alt="Process" class="img-fluid" />
-					</div>
-				</div>
-			</div>
-			<div class="row upset justify-content-center mt60">
-				<div class="col-lg-4 v-center order1">
-					<div class="image-block1">
-						<img src="img/nightlife/pattay_bang/img7.jpeg" alt="Process" class="img-fluid" />
-					</div>
-				</div>
-				<div class="col-lg-7 v-center order2">
-					<div class="ps-block">
-						<span>7</span>
-						<h3>Day 5</h3>
-						<p class="text-justify">Airport Drop</p>
-					</div>
+				<div class="col-lg-6">
+					<h5>Sightseeing in Pattaya & Bangkok:</h5>
+					<p class="text-justify"><b class="text-white">Day 1: </b>Bkk Transfer Tiger Topia with Crocodile Show Break fast Morning Check in
+						Hotel.</p>
+					<p><b class="text-white">Day 2: </b> Coral Island with Lunch ( 9am to 14hrs )</p>
+					<p><b class="text-white">Day 3: </b> Pattaya City & Temple Tour | Free Drop to Honey Soap - Massage ( Pay & Use)</p>
+					<p><b class="text-white">Day 4: </b> Check out Pattaya Drop to Bangkok Hotel Stay,</p>
+					<p><b class="text-white">Day 5: </b> Airport Drop.</p>
 				</div>
 			</div>
 		</div>
 	</section>
+	<section class="work pt-5 pb-5">
+		<div class="container">
+			<div class="row mt30">
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
+					<img src="img/nightlife/pattay_bang/img1.jpeg" alt="img">
+				</div>
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.5s">
+					<img src="img/nightlife/pattay_bang/img2.jpeg" alt="img">
+				</div>
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.1s">
+					<img src="img/nightlife/pattay_bang/img3.jpeg" alt="img">
+				</div>
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.7s">
+					<img src="img/nightlife/pattay_bang/img4.jpeg" alt="img">
+				</div>
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.7s">
+					<img src="img/nightlife/pattay_bang/img5.jpeg" alt="img">
+				</div>
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.7s">
+					<img src="img/nightlife/pattay_bang/img6.jpeg" alt="img">
+				</div>
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.7s">
+					<img src="img/nightlife/pattay_bang/img7.jpeg" alt="img">
+				</div>
+			</div>
+		</div>
+	</section>
+
 
 	<footer>
 
@@ -338,7 +279,9 @@
 							<li>
 								<span><i class="fas fa-envelope"></i></span>
 								<p>Email <span> <a href="mailto:nightlifetourschennai@gmail.com"
-											target="_blank">nightlifetourschennai@gmail.com</a></span>
+											target="_blank">nightlifetourschennai@gmail.com</a>|
+											<a href="mailto:nightlifetours@nlt.in" target="_blank">nightlifetours@nlt.in
+											</a></span>
 								</p>
 							</li>
 							<li>
@@ -366,7 +309,8 @@
 					</div>
 
 					<p class=" border-bottom pb-2 text-justify pt-3  border-2">© 2025 All Rights Reserved By <b
-						class="text-primary"><a href="https://nightlifetours.in/" target="_blank">Night Life Tours</a></b></p>
+							class="text-primary"><a href="https://nightlifetours.in/" target="_blank">Night Life
+								Tours</a></b></p>
 				</div>
 			</div>
 		</div>
